# adl-m365-automation-starter

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  Dockerfile  INTEGRATION_DESIGN.md  LICENSE  README.md  invoice_watcher.py  package-lock.json  package.json  pyproject.toml  requirements.txt  startup.sh  test_batch_upload.py
.github/workflows/: ci-deploy.yml  docker-build.yml
docs/: LOGIC_APPS_SETUP.md  POWER_AUTOMATE_INTEGRATION.md  SHAREPOINT_SETUP.md  architecture.md  citizen-dev-lab.md  runbook.md
infra/: logic-app-definition.json  logic-app-using-fastapi.json  postman_collection.json
infra/apim-policies/: complete-policy-example.xml  cors-policy.xml  rate-limit-policy.xml  subscription-key-policy.xml
infra/bicep/: main.bicep
pipelines/: azure-pipelines.yml
samples/invoices/: README.md
samples/power-automate/: README.md  adaptive_card_approval.json  http_trigger_definition.json  process-invoices.ps1
src/api/: deps.py  main.py
src/api/routers/: invoice.py
src/core/: config.py  logging.py
src/models/: invoice.py
src/services/: approval_rules.py  form_recognizer.py  graph.py  invoice_types.py  types.py
src/services/events/: event_publisher.py
src/services/storage/: __init__.py  approval_tracker_base.py  approvals.py  approvals_sqlite.py
tests/: conftest.py  test_approval_rules.py  test_approval_workflow.py  test_approve.py  test_bill_to_whitelist.py  test_extract.py  test_health.py  test_integration_real_invoices.py  test_process.py  test_service_bus_events.py  test_service_bus_integration.py  test_sqlite_approvals.py  test_validate.py
tests/postman/: postman_collection.json
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/upload/: page.tsx
web/components/: DragDropArea.tsx  ExtractedDataDisplay.tsx  ThemeProvider.tsx  ThemeToggle.tsx
